--- a/LocalDisasterPreventionInformationApp/Pages/Top/TopPage.xaml
+++ b/LocalDisasterPreventionInformationApp/Pages/Top/TopPage.xaml
@@ -33,6 +33,12 @@
                         <!-- 検索パネル -->
                         <Grid ColumnDefinitions="150,Auto,Auto"
                               ColumnSpacing="8">
+
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="Auto"/>
+                                <RowDefinition Height="Auto"/>
+                            </Grid.RowDefinitions>
+                            
                             <Picker Title="都道府県を選択"
                                     x:Name="PrefecturePicker"
                                     HeightRequest="60"
@@ -40,8 +46,19 @@
                                     HorizontalOptions="Start"
                                     Grid.Column="0"
                                     SelectedIndexChanged="PrefecturePicker_SelectedIndexChanged"/>
+                            <Picker Title="市区町村を選択"
+                                    x:Name="CityPicker"
+                                    HeightRequest="60"
+                                    WidthRequest="150"
+                                    HorizontalOptions="Start"
+                                    Grid.Column="0"
+                                    Grid.Row="1"
+                                    Margin="0,10,0,0"
+                                    IsEnabled="False"
+                                    SelectedIndexChanged="CityPicker_SelectedIndexChanged"/>
 
                             <Border Grid.Column="1"
+                                    Grid.Row="1"
                                     Stroke="#888888"
                                     StrokeThickness="2"
                                     BackgroundColor="Transparent"
@@ -67,6 +84,7 @@
                             </Border>
 
                             <Border Grid.Column="2"
+                                    Grid.Row="1"
                                     Stroke="#888888"
                                     StrokeThickness="2"
                                     BackgroundColor="Transparent"
@@ -94,7 +112,7 @@
 
                         <BoxView HeightRequest="1" BackgroundColor="#CCCCCC"/>
 
-                        <Label Text="近くの避難所（10件）" FontAttributes="Bold"/>
+                        <Label Text="避難所リスト" FontAttributes="Bold"/>
 
                         <CollectionView x:Name="NearbySheltersList"
                                         SelectionMode="Single"
@@ -103,7 +121,7 @@
                             <CollectionView.ItemTemplate>
                                 <DataTemplate>
                                     <StackLayout Padding="5"
-                                                     BackgroundColor="{Binding IsSelected,Converter={StaticResource BoolToColorConver}}">
+                                                 BackgroundColor="{Binding IsSelected,Converter={StaticResource BoolToColorConver}}">
                                         <Label Text="{Binding Shelter.Name}"/>
                                         <Label Text="{Binding Distance,StringFormat='{0:F2}km'}"
                                                    FontSize="12" TextColor="Gray"/>
