--- a/LocalDisasterPreventionInformationApp/Pages/Stock/StockPage.xaml
+++ b/LocalDisasterPreventionInformationApp/Pages/Stock/StockPage.xaml
@@ -35,7 +35,8 @@
                 <Grid Grid.Row="1" ColumnDefinitions="*,Auto" Margin="0,10">
                     <Label Text="{Binding SelectedSortName}"
                            VerticalOptions="Center"
-                           FontSize="18"/>
+                           FontSize="18"
+                           Margin="200,0,0,0"/>
                     <Picker x:Name="SortPicker"
                             Grid.Column="1"
                             Title="並べ替え"
