--- a/LocalDisasterPreventionInformationApp/AppShell.xaml
+++ b/LocalDisasterPreventionInformationApp/AppShell.xaml
@@ -4,8 +4,6 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:top="clr-namespace:LocalDisasterPreventionInformationApp.Pages.Top"
-    xmlns:friends="clr-namespace:LocalDisasterPreventionInformationApp.Pages.Friends"
-    xmlns:notification="clr-namespace:LocalDisasterPreventionInformationApp.Pages.Notification"
     xmlns:setting="clr-namespace:LocalDisasterPreventionInformationApp.Pages.Setting"
     xmlns:startup="clr-namespace:LocalDisasterPreventionInformationApp.Pages.Startup"
     xmlns:stock="clr-namespace:LocalDisasterPreventionInformationApp.Pages.Stock"
@@ -53,18 +51,8 @@
                   FlyoutItemIsVisible="False"
                   ContentTemplate="{DataTemplate register:ConfirmPage}" />
 
-    <!-- 友達一覧ページ -->
-    <ShellContent Route="FriendsPage"
+    <!-- フォント選択ページ -->
+    <ShellContent Route="FontPage"
                   FlyoutItemIsVisible="False"
-                  ContentTemplate="{DataTemplate friends:FriendsPage}" />
-
-    <!-- 通知ページ -->
-    <ShellContent Route="NotificationPage"
-                  FlyoutItemIsVisible="False"
-                  ContentTemplate="{DataTemplate notification:NotificationPage}" />
-
-    <!-- 設定ページ -->
-    <ShellContent Route="SettingPage"
-                  FlyoutItemIsVisible="False"
-                  ContentTemplate="{DataTemplate setting:SettingPage}" />
+                  ContentTemplate="{DataTemplate setting:FontPage}" />
 </Shell>
